@@ -143,6 +143,9 @@
 			<li><span class="label label-info">Modified</span> Upgraded ELK version from 0.5.0 to 0.6.0, see the 
 				<a href="https://projects.eclipse.org/projects/modeling.elk/releases/0.6.0">ELK documentation</a> for the list of changes in that version.
 			</li>
+			<li><span class="label label-info">Modified</span> 
+				<code>org.eclipse.sirius.diagram.ui.tools.api.graphical.edit.styles.SimpleStyleConfiguration.isShowIcon(DDiagramElement, IGraphicalEditPart)</code> is now protected instead of private.
+			</li>
 		</ul>
 		<h2 id="sirius6.3.0">Changes in Sirius 6.3.0</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
