@@ -9,6 +9,7 @@ h2(#sirius6.3.1). Changes in Sirius 6.3.1
 h3. Developer-Visible Changes
 
 * <span class="label label-info">Modified</span> Upgraded ELK version from 0.5.0 to 0.6.0, see the "ELK documentation":https://projects.eclipse.org/projects/modeling.elk/releases/0.6.0 for the list of changes in that version.
+* <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.ui.tools.api.graphical.edit.styles.SimpleStyleConfiguration.isShowIcon(DDiagramElement, IGraphicalEditPart)@ is now protected instead of private.
 
 h2(#sirius6.3.0). Changes in Sirius 6.3.0
 
